# django-model-editor

./: .gitignore  setup.cfg  setup.py
model_editor/: __init__.py  apps.py
model_editor/management/commands/: edit.py
requirements/: requirements-packaging.txt
