[metadata]
name = django-model-editor
version = 0.1
description = Provides edit command to change specific model field value using external editor (default editor: vim)
long_description = file: README.rst
author = Petr Dovnar
author_email = petrdovnar@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
